This is the CHANGELOG for amavisd-milter.

20061113:
	Limited support for legacy sendmail 8.12:
	- amavisd-milter don't call smfi_progress when wait for amavisd-new
	  communication socket.
	- amavisd-milter use smfi_addheader insted of smfi_insheader for
	  insheader and addheader AM.PDP response commands. This work well
	  with amavisd-new 2.4.3 or newer. Older versions are affected with
	  bug fixed on 20060714.

20061017:
	Implemented AM.PDP request attribute protocol_name.

	amavisd-milter adds Received header for the current connection to
	the mail file as the first line because without the most recent
	Received header, Spamassassin reports lots of false hits on rules
	checking where the message was received from.
	Thanks to: Jo Rhett <jrhett@netconsonance.com>

	NOTE: Please add these line to your sendmail.mc:

	define(`confMILTER_MACROS_ENVFROM', confMILTER_MACROS_ENVFROM`, r, b')


20061008:
	amavisd-milter-1.2.0

	Improved amavisd connection locking.  When amavisd connection is closed,
	lock is removed immediately.

20061004:
	Implemented AM.PDP protocol version 2.  New response attributes
	are version_server, insheader and quarantine.

	Tru64 portability fix: don't use variadic macros.

20060714:
	Fixed bug with addheader: amavisd-new assume that header is added
	to the end of headers but sendmail insert it before first occurence
	of the header with same name.
	Submitted by: Krzysztof Oledzki <ole@ans.pl>

20060616:
	Amavisd communication buffer is now dynamically allocated.
	MAXAMABUF is maximum buffer length, AMABUFCHUNK is initial length
	and reallocation step.  Buffer is allocated for every connection.

	Tru64 portability fix: replace missing daemon(8) function.

20060414:
	amavisd-milter-1.1.2

	MAXAMABUF is increased from 2048 to 65536 because it must be greater
	then confMAX_HEADERS_LENGTH which is usually set to 32768. If mail
	header is longer than MAXAMABUF, mail is permanently rejected with